CHANGES
=======

HEAD
------------------
- added config setting 'faxdetecttime' to limit the fax detection for a given amount of seconds.
- added config option for subscriber prefix. Some lines may show local calls without area code
  signaled as subscriber-number. Here the complete prefix including area code must be added.
- better counting of active b-channels.


chan_capi-1.1.1
------------------
- fixed controller count when creating NULL-PLCI interface.
- simplified check for unused controller.


chan_capi-1.1.0
------------------
- send local DATE/TIME with CONNECT when in NT-mode.
- added transfergroup config option to set controllers allowed for transfer.
- send Sending-Complete if overlap dialing is not used.
- fixed numberingplan for 'connected number'.
- added devicestate option.
- capi-chat can play music-on-hold for first caller.
- adapt to new asterisk 1.6 API
- fixed reading capi profile on big-endian
- increased maximum number of CAPI controllers to 64 (needed for big PBX).
- if immedіate=yes is set in DID mode, accept calls to empty DNID (needed for Austrian lines).
- use own libcapi20 implementation by default (no library for capi is needed any more).

chan_capi-1.0.2
------------------
- possibly fixed ECT channel hang
- added 'x' option to capicommand(ect) to have real 'explicit call transfer'
  (needed by some ISDN lines)
- support CCBS (call completion on busy subscriber)
- added capicommand(chat) for CAPI based MeetMe/Conference using onboard DSPs.
- fixed ton-display in 'show capi channels' on outgoing line.
- fix for 64bit support
- Asterisk 1.4.4 adaptions
- send 'In-band info available' for progress in NT-mode
- detect KEYPAD digits in NT-mode and send call to 'K...' extension
- fixed possible deadlock when answering a just disconnected call


chan_capi-1.0.1
------------------
- added qsig caller-name patch by Mario Goegel
- recognise asterisk 1.4.1
- register at CAPI with needed maxLogicalConnections only